mod_courseduration: Fixed vertical alignment of timer icons.

--- a/mod/courseduration/styles.css
+++ b/mod/courseduration/styles.css
@@ -3,7 +3,6 @@
   content: "\f017";
   display: inline-block;
   padding-right: 3px;
-  vertical-align: middle;
   font-weight: 300;
 }
 
